--- a/index.html
+++ b/index.html
@@ -1,41 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link href="./assets/css/style.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header class="navigation">
-        <div class="inline-blockLogo">
-            <img src="Images/Portfolio Logo.png" alt="Logo">
-        </div>
-        <nav>
-            <ul>
-            <li class="inline-block"><a href="#">About</a></li>
-            <li class="inline-block"><a href="#"></a>Home</a></li>
-            <li class="inline-block"><a href="#"></a>Resume test</a></li>
-        </ul>
-        
-        </nav>
+<html>
+  <head>
+    <title>Portfolio</title>
+    <link href="assets/css/style.css" type="text/css" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+      <img class= logo src="Images/Portfolio Logo.png">
+      <ul>
+        <li>ABOUT</li>
+        <li>SKILLS</li>
+        <li>WORK</li>
+        <li>CONTACT</li>
+      </ul>
     </header>
-    <section class="heroImg">
-        <div class="content">
-           <img src="Images/Yellow Pink Simple Profile Picture.png" alt="Me">
-            <h1>Hello!</h1>
-            <p>My name is Ashley Cortez. As a passionate UX designer I strive to use my background in psychology and HR to understand, and empathize with diverse populations of people.
-            <button>Download Resume</button> 
-            </p>
-        </div>
+    <section class="hero">
+      <div class="content">
+        <img src="images/Yellow Pink Simple Profile Picture.png">
+        <h1>Hello!</h1>
+        <p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua.</p>
+        <button>Download Resume</button>
+      </div>
+    
     </section>
     <footer>
-        <ul>
-            <li class="inline-block"> About</li>
-            <li class="inline-block"> Home</li>
-            <li class="inline-block"> Resume</li>
-            <li class="inline-block"> LinkedIn</li>
+      <ul>
+        <li>ABOUT</li>
+        <li>SKILLS</li>
+        <li>WORK</li>
+        <li>CONTACT</li>
+      </ul>
     </footer>
-</body>
+  </body>
 </html>
